# config/packages/nelmio_api_doc.yaml
@@ -3,16 +3,30 @@ nelmio_api_doc:
         servers:
             - url: https://localhost:8000/
               description: API sur localhost
+            - url: https://aubergeapi.malakayalauvergnat.com/
+              description: API en production
         info:
             title: API Auberge
             description: Rendu API back-end symfony
             version: 1.0.0
             x-build: #CommitHash
         tags:
-            - name: "Beds"
-              description: "Endpoints related to Beds"
-            - name: "Rooms"
-              description: "Endpoints related to Rooms"
+            - name: "Authentication"
+              description: "Authentication"
+            - name: "Profile"
+              description: "Manage your profile"
+            - name: "Room"
+              description: "Manage Rooms"
+            - name: "Bed"
+              description: "Manage Beds"
+            - name: "Payment"
+              description: "Payment"
+            - name: "Booking"
+              description: "Manage your booking"
+            - name: "Review"
+              description: "Review your booking"
+
+
         components:
             securitySchemes:
                 Bearer:
