# src/Controller/RoomController.php
@@ -24,6 +24,7 @@ class RoomController extends AbstractController
         path: '/api/room',
         description: 'Retrieve a list of all rooms in the system.',
         summary: 'Get all rooms',
+        security: [['Bearer' => []]],
         tags: ['Room'],
         responses: [
             new OA\Response(
@@ -36,21 +37,25 @@ class RoomController extends AbstractController
             )
         ]
     )]
-    #[Route('/api/room', name: 'app_room')]
+    #[Route('/api/room', name: 'app_room', methods: ['GET'])]
     public function index(RoomRepository $roomRepository): Response
     {
         $rooms = $roomRepository->findAll();
-        return $this->json($rooms,201, [], ['groups' => ['roomJson']]);
+        return $this->json($rooms,200, [], ['groups' => ['roomJson']]);
     }
 
     #[OA\Post(
         path: '/api/room/create',
         description: 'Create a new room in the system.',
         summary: 'Create a new room',
+        security: [['Bearer' => []]],
         requestBody: new OA\RequestBody(
             required: true,
             content: new OA\JsonContent(
-                ref: '#/components/schemas/Room'
+                properties: [
+                    new OA\Property(property: 'name', type: 'string', description: 'The name of the room')
+                ],
+                type: 'object'
             )
         ),
         tags: ['Room'],
@@ -61,37 +66,47 @@ class RoomController extends AbstractController
                 content: new OA\JsonContent(ref: '#/components/schemas/Room')
             ),
             new OA\Response(
+                response: 400,
+                description: 'Bad request'
+            ),
+            new OA\Response(
                 response: 401,
                 description: 'Unauthorized'
             )
         ]
     )]
-    #[Route('/api/room/create', name: 'app_room_create')]
+    #[Route('/api/room/create', name: 'app_room_create', methods: ["POST"])]
     public function create(RoomRepository $roomRepository, Request $request, SerializerInterface $serializer, EntityManagerInterface $manager, Security $security): Response
     {
         $room = $serializer->deserialize($request->getContent(),Room::class,"json");
         $author = $security->getUser();
         if (!$author){
-            throw new AccessDeniedException('You must be logged in to create a sandwich.');
+            throw new AccessDeniedException('You must be logged in to create a room.');
         }
         $manager->persist($room);
         $manager->flush();
 
-        return $this->json($room,200, [], ['groups' => ['roomJson']]);
+        return $this->json($room,201, [], ['groups' => ['roomJson']]);
     }
 
     #[OA\Put(
         path: '/api/room/edit/{id}',
         description: 'Edit an existing room by its ID.',
         summary: 'Edit a room',
+        security: [['Bearer' => []]],
         requestBody: new OA\RequestBody(
             required: true,
-            content: new OA\JsonContent(ref: '#/components/schemas/Room')
+            content: new OA\JsonContent(
+                properties: [
+                    new OA\Property(property: 'name', type: 'string', description: 'The new name of the room')
+                ],
+                type: 'object'
+            )
         ),
         tags: ['Room'],
         responses: [
             new OA\Response(
-                response: 200,
+                response: 201,
                 description: 'Room updated successfully',
                 content: new OA\JsonContent(ref: '#/components/schemas/Room')
             ),
@@ -110,7 +125,7 @@ class RoomController extends AbstractController
         }
 //        $user = $security->getUser();
 //        if ($sandwich->getAuthor() !== $user) {
-//            throw new AccessDeniedException('You are not allowed to edit this sandwich.');
+//            throw new AccessDeniedException('You are not allowed to edit this room.');
 //        }
 
         $serializer->deserialize($request->getContent(), Room::class, 'json', ['object_to_populate' => $room]);
@@ -125,6 +140,7 @@ class RoomController extends AbstractController
         path: '/api/room/delete/{id}',
         description: 'Delete a room by its ID.',
         summary: 'Delete a room',
+        security: [['Bearer' => []]],
         tags: ['Room'],
         responses: [
             new OA\Response(
